# task_manager

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  readmo.md
TaskManager/: settings.py  urls.py
base/: models.py
tasks/: models.py  permissions.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_executors.py  0003_task_owner.py  0004_alter_task_finish_date.py  0005_auto_20211010_2131.py
users/: models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_user_username.py
